--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -2,12 +2,10 @@
   <!-- Your html here -->
   <input ng-model='link.url'/>
   <button ng-click='addLink(url)'>Submit</button>
-  <ul>
-    <li ng-click='goTo($index)'>
-  </ul>
   <pre>
-    {{ newLink }}
+    {{ link.url }}
   </pre>
+
 </div>
 
 
