--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>Shortly</h1>
+    <nav class='navigation' class='hidden'>
+      <ul>
+        <li><a ng-href='#/shorten'>Shorten</a></li>
+        <li><a ng-href='#/links'>Links</a></li>
+        <li><a ng-href='#/signin'>Logout</a></li>
+      </ul>
+    </nav>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view>
